# urlencode

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml  crates.yaml  linter.yaml  release.yaml
src/: main.rs
