[package]
name = "urlencode"
version = "0.1.0"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "urlencode in rust!"
repository = "https://github.com/waldirborbajr/urlencode"
homepage = "https://github.com/waldirborbajr/encode"
readme  = "README.md"
keywords = ["urlencode", "decode", "encode"]
license = "MIT"

[dependencies]
clap = "4.4.8"
urlencoding = "2.1.0"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = 'z' # Optimize for size
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
rpath = false
