[package]
name = "urlencode"
version = "0.1.1"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "urlencode in rust!"
repository = "https://github.com/waldirborbajr/urlencode"
homepage = "https://github.com/waldirborbajr/urlencode"
readme  = "README.md"
keywords = ["urlencode", "decode", "encode"]
license = "MIT"

[[bin]]
name = "urlencode"
path = "src/main.rs"

[dependencies]
urlencoding = "2.1.3"

[build]
rustflags = ["-z", "threads=8"]

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = 'z' # Optimize for size
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
rpath = false
