[package]
name = "urlencode"
version = "0.1.1"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "urlencode in rust!"
repository = "https://github.com/waldirborbajr/urlencode"
homepage = "https://github.com/waldirborbajr/urlencode"
readme  = "README.md"
keywords = ["urlencode", "decode", "encode"]
license = "MIT"

[[bin]]
name = "urlencode"
path = "src/main.rs"

[dependencies]
urlencoding = "2.1.3"

[build]
rustflags = ["-z", "threads=8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.
